--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/test.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --build tsconfig.json",
     "pretest": "npm run build",
-    "test": "jest --detectOpenHandles   --config jest.config.json",
+    "test": "jest --detectOpenHandles  --config jest.config.json",
     "posttest": "sh bin/test-after",
     "test-ci": "npx jest --detectOpenHandles --config jest.config.json"
   },
