--- a/jest.config.json
+++ b/jest.config.json
@@ -4,5 +4,6 @@
   "rootDir": "./dist/",
   "testPathIgnorePatterns": ["/node_modules/"],
   "collectCoverage": true,
+  "coverageReporters": ["json", "lcov", "clover"],
   "coverageDirectory": "../coverage"
 }
