--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "dist/test.js",
   "scripts": {
+    "prebuild": "npx rimraf dist && npm run lint",
     "build": "npx tsc --build tsconfig.json",
+    "build:cloud": "npx tsc --build tsconfig.json",
+    "start": "npx ts-node-dev ./src/app.ts",
+    "start:cloud": "npx pm2-docker start ecosystem.config.js",
+    "lint": "npx eslint --fix ./src/**/*.ts",
     "pretest": "npm run build",
-    "test": "jest --detectOpenHandles  --config jest.config.json",
-    "posttest": "sh bin/test-after",
-    "test-ci": "npx jest --config jest.config.json"
+    "test": "npx jest --config jest.config.json",
+    "test:ci": "npx jest --config jest.config.json"
   },
   "files": [
     "dist/**/*"
@@ -18,18 +22,38 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "redis": "^2.8.0",
-    "winston": "^3.2.1"
+    "winston": "^3.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.0",
-    "@types/jest": "^24.0.15",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.9",
     "@types/redis": "^2.8.13",
     "@types/supertest": "^2.0.8",
-    "@types/winston": "^2.4.4",
-    "jest": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsdoc": "^26.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-unicorn": "^20.1.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.7",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "tslint": "^5.18.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint",
+      "git add"
+    ]
   }
 }
